Changes for version 24.1 (unreleased) - Joachim Wiedorn

  Sources
  -------
    - Only warn if founded bad partition (src/partition.c).
    - Install the .dat files of images, too (images/Makefile).
    - Fix target 'all' in main Makefile.
    - Install lilo.static, too, if existing.
    - Add CFLAGS, CPPFLAGS, LDFLAGS everywhere needed
        (useful e.g. for hardening in Debian).

  General
  -------
    - Use 'lilo -H' in hook scripts to ignore error on degraded RAID1
        RAID1 systems  (thanks to M. Schnalke).
    - Small update of script lilo-uuid-diskid.
    - Large upgrade of script liloconfig:
        * solve some bugs (see: Debian, Ubuntu)
        * now with update function
        * now with more tolerant file names of initram
        * now with use of kernel links as fallback
    - Update example config in lilo.example.conf.
    - Update manpage of liloconfig and lilo-uuid-diskid.


Changes for version 24.0 (07-June-2013) - Joachim Wiedorn

  Documentations
  --------------
    - Update of lilo.conf.5 manpage with some corrections.
    - Add new manpages as pod files (sources):
      * liloconfig.pod     (from Debian)
      * lilo-uuid-diskid.pod   (from Debian)
      * lilo.pod  (converted from lilo.8)
    - Add script man/pod2manpages for converting pod files.
    - Create manpages from pod files.
    - Deactivate Makefile for docs. Don't generate html/pdf.
    - Add complete html documentation for history (v21.5).

  Sources
  -------
    - Support for kernel images on GPT hard disks in the first 15
        partitions, otherwise set comments (src/geometry.c, src/lilo.h)
    - Update src/Makefile to always stripping lilo and lilo.static.

  General
  -------
    - Fix abort problem in script mkrescue. (thanks to S. R. Wright)
    - Update script liloconf to find kernel versions 3.x, too.
    - Remove some more hints to obsolete OS/2 (source, doc).
    - Fix to be compatible to gcc 4.8 and higher (use -ffreestanding)

